--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
   "dependencies": {
     "@prisma/client": "^6.4.1",
     "colors": "^1.4.0",
-    "express": "^4.21.2"
+    "express": "^4.21.2",
+    "socket.io-client": "^4.8.1"
   }
 }
